--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": "6.11.5",
-    "npm" : "3.10.10"
+    "npm": "3.10.10"
   },
   "author": "srk",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "md5": "2.2.1",
     "moment": "^2.21.0",
     "mongoose": "4.12.5",
+    "node-pre-gyp": "^0.9.0",
     "nodemon": "^1.12.1"
   }
 }
